Fix layout bug

--- a/style.scss
+++ b/style.scss
@@ -94,8 +94,10 @@ section {
 			height: 135px;
 		}
 		img, video {
+			width: 480px;
 			height: 270px;
 			@media only screen and (max-width : 599px) {
+				width: 240px;
 				height: 135px;
 			}
 		}
